--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button onclick="searchFood()" class="btn btn-outline-secondary" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="button-search">Search</button>
       </div>
 
-      <section id='show' class="container">
+      <section class="container">
         <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
            
           </div>
