--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <h1 class="text-success text-center mt-5">Search Your Meal</h1>
     <div class="input-group mb-3 w-50 mx-auto">
         <input id="search-field" type="text" class="form-control" placeholder="Enter a meal name" aria-label="Recipient's username" aria-describedby="button-addon2">
-        <button onclick="searchFood()" class="btn btn-outline-secondary" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="button-search">Search</button>
+        <button onclick="searchFood()" class="btn btn-outline-secondary" type="button"  id="button-search">Search</button>
       </div>
-
       <section class="container">
+        <div id='detail' class="mx-auto mb-5 w-50">
+
+        </div>
         <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
-           
-          </div>
+
+        </div>
 
       </section>
 
