--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Meal Db</title>
     <!-- bootstrap css  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body id='show' class="bg-warning bg-opacity-25">
+
+<body>
+  <div id="loader"></div>
+  <div id="myDiv" style="display:none;" class="animate-bottom">
     <h1 class="text-success text-center mt-5">Search Your Meal</h1>
     <div class="input-group mb-3 w-50 mx-auto">
         <input id="search-field" type="text" class="form-control" placeholder="Enter a meal name" aria-label="Recipient's username" aria-describedby="button-addon2">
@@ -23,6 +27,9 @@
         </div>
 
       </section>
+
+  </div>
+    
 
 
     <!-- bootstrap js  -->
